--- a/Sunduk.PWA/Dialogs/ChangelogDialog.razor
+++ b/Sunduk.PWA/Dialogs/ChangelogDialog.razor
@@ -114,7 +114,9 @@ https://github.com/dece1ver/Sunduk
         Info.Add(new ChangelogInfo(new Version(1, 0, 8, 0), new DateTime(2025, 8, 7), new[] {
             "Шаблонник"}));
         Info.Add(new ChangelogInfo(new Version(1, 0, 8, 1), new DateTime(2025, 8, 14), new[] {
-            "Калькулятор в рядом с калькулятором режимов"}));
+            "Калькулятор рядом с калькулятором режимов"}));
+        Info.Add(new ChangelogInfo(new Version(1, 0, 8, 1), new DateTime(2025, 11, 14), new[] {
+            "Улучшение калькулятора в калькуляторе", "Улучшение шаблонника"}));
         Info.Reverse();
     }
 
